# taskOptimizer

./: .gitignore  CMakeLists.txt
include/: taskOptimizerModule.hpp
python/: costFunctionVisualization2D.py  optimizationPlottingTools.py  plot1DObstacleTest.py  plot3DObstacleTest.py  plotTest.py  tester.py  trajectoryPlottingTools.py  trajectoryVisualization.py
src/: main.cpp  taskOptimizerModule.cpp
